<resources>
    <string name="app_name">Outdoor Adventures</string>
    <string name="MainMenu">Main Menu</string>
    <string name="LocationPreferences">Location Preferences</string>
    <string name="AboutApp">About App</string>

    <string name="about_page_title">About Outdoor Adventures</string>
    <string name="instructions">Instructions:</string>
    <string name="appsummary">Outdoor Adventures allows you to search for outdoor activities in the US, such as hiking, biking, fishing, hunting and more. You can search for a specific area, narrowing choices down by state or you can find places near your current location. </string>
    <string name="step_one">
    1. Edit Your Preferences in the Preferences Menu. These will be used to help filter your searches.
    </string>
    <string name="step_two">
    2. Find places near you by clicking the Near Me button. This will prompt you to enter a search radius, the distances are 50, 100 and 300 miles. Enable Location Settings in order to use this feature.
    </string>
    <string name="step_three">
    3. Find sites and activities in your state by clicking the State Search button. You will first be taken to the state selection screen and then the activity search screen.
    </string>
    <string name="step_four">
    4. Each search will bring you to a results page with sites corresponding to your search criteria. You can edit your preferences from the Results screen by using the tab bar at the top of the screen. After editing your preferences, hit the Android back button to return to the Results screen to view updated results.
    </string>
    <string name="step_five">
    5. Look at detailed park information based on your search by clicking on the name of the park in the Results screen.
    </string>
    <string name="step_six">
    6. You can always return to the previous screen by hitting the Android back button on your phone.
    </string>
    <string name="step_seven">7. Have fun finding your next Outdoor Adventure!</string>
    <string name="title_activity_map_result">Map</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cancel Action</string>
    <string name="gps_network_not_enabled">GPS is currently not enabled</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="attribute">Attribute: \nIcons made by Freepik from www.flaticon.com</string>
</resources>