<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="casaubon.outdooradventures.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/aboutScrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_page_title"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/appsummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_title"
                android:paddingTop="16dp"
                android:text="@string/appsummary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/appsummary"
                android:paddingTop="16dp"
                android:text="@string/instructions"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/step1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions"
                android:paddingTop="16dp"
                android:text="@string/step_one"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/step2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/step1"
                android:paddingTop="16dp"
                android:text="@string/step_two"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/step3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/step2"
                android:paddingTop="16dp"
                android:text="@string/step_three"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/step4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/step3"
                android:paddingTop="16dp"
                android:text="@string/step_four"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/step5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/step4"
                android:paddingTop="16dp"
                android:text="@string/step_five"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/step6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/step5"
                android:paddingTop="16dp"
                android:text="@string/step_six"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/step7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/step6"
                android:paddingTop="16dp"
                android:text="@string/step_seven"
                android:textSize="15sp" />

        </RelativeLayout>

    </ScrollView>

    <!--<ScrollView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/scrollView" />-->

    <!--<ScrollView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/scrollView2" />-->

</RelativeLayout>